EDAUMMSandbox/EDAUMMSandbox/force-app/main/default/objects/hed__Hierarchy_Settings__c/fields/hed__Account_Processor__c.field-meta.xml
<CustomField>
    <fullName>hed__Account_Processor__c</fullName>
    <description>ID of the default record type for Account. For example, if specifying Administrative (the recommended Account model), enter the ID of the Administrative record type for the Account object.</description>
    <inlineHelpText>Id. del tipo de registro predeterminado para Cuenta. Por ejemplo, si se especifica Administrativa (el modelo de cuenta recomendado), ingrese el Id. del tipo de dirección Administrativa para le objeto Cuenta.</inlineHelpText>
    <label>Account Processor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>