EDAUMMSandbox/EDAUMMSandbox/force-app/main/default/objects/hed__Hierarchy_Settings__c/fields/hed__Advancement_Namespace__c.field-meta.xml
<CustomField>
    <fullName>hed__Advancement_Namespace__c</fullName>
    <defaultValue>&quot;gem&quot;</defaultValue>
    <description>The namespace of the Gift Entry Manager managed package.</description>
    <inlineHelpText>El espacio de nombres del paquete gestionado Gerente de entrada de regalo.</inlineHelpText>
    <label>GEM Namespace</label>
    <length>10</length>
    <type>Text</type>
</CustomField>