EDAUMMSandbox/EDAUMMSandbox/force-app/main/default/objects/hed__Hierarchy_Settings__c/fields/hed__Affiliation_Record_Type_Enforced__c.field-meta.xml
<CustomField>
    <fullName>hed__Affiliation_Record_Type_Enforced__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If enabled, an error results when users populate a primary field on Contact with an Account that has a record type mismatch to the record type defined in EDA Settings. The Affiliation record is not created and primary fields on Contact are not corrected</description>
    <inlineHelpText>Si se activa, se produce un error cuando los usuarios rellenan un campo principal en Contacto con una cuenta que tiene una discrepancia de tipo de registro en el tipo de registro definido en Configuración de EDA. El registro Afiliación no se crea y los campos principales en Contacto no se corrigen</inlineHelpText>
    <label>Affiliation Record Type Enforced</label>
    <type>Checkbox</type>
</CustomField>