EDAUMMSandbox/EDAUMMSandbox/force-app/main/default/objects/hed__Hierarchy_Settings__c/fields/hed__Affl_ProgEnroll_Copy_End_Date__c.field-meta.xml
<CustomField>
    <fullName>hed__Affl_ProgEnroll_Copy_End_Date__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether to set the End Date of the Affiliation created with a Program Enrollment. If enabled, set the End Date to the Program Enrollment&apos;s End Date. If disabled, don&apos;t specify the Affiliation&apos;s End Date.</description>
    <inlineHelpText>Indica si establecer la fecha de finalización de la afiliación creada con una Inscripción. Establezca la fecha de finalización como la fecha de finalización de la inscripción de programa. Si no, no especifique la fecha de finalización de la afiliación.</inlineHelpText>
    <label>Affil End Date Copy from Prog Enroll</label>
    <type>Checkbox</type>
</CustomField>