EDAUMMSandbox/EDAUMMSandbox/force-app/main/default/objects/hed__Hierarchy_Settings__c/fields/hed__Affl_ProgEnroll_Copy_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>hed__Affl_ProgEnroll_Copy_Start_Date__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether to set the Start Date of the Affiliation created with a Program Enrollment. If enabled, set the Start Date to the Program Enrollment&apos;s Start Date. If disabled, don&apos;t specify the Affiliation&apos;s Start Date.</description>
    <inlineHelpText>Indica si establecr la fecha de inicio de la afiliación creada con una Inscripción de programa. Si se activa, establezca la fecha de inicio como la fecha de inicio de la inscripción. Si se desactiva, no especifique la fecha de inicio de la afiliación.</inlineHelpText>
    <label>Affil Start Date Copy from Prog Enroll</label>
    <type>Checkbox</type>
</CustomField>