EDAUMMSandbox/EDAUMMSandbox/force-app/main/default/objects/hed__Hierarchy_Settings__c/fields/hed__Affl_ProgEnroll_Del__c.field-meta.xml
<CustomField>
    <fullName>hed__Affl_ProgEnroll_Del__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether to delete an Affiliation when its related Program Enrollment is deleted. If enabled, delete the Affiliation. If disabled, set the Affiliation&apos;s Status to the value specified in the related setting, Affil Status When Delete Prog Enroll.</description>
    <inlineHelpText>Indica si eliminar una afiliación cuando elimina su inscripción relacionada. Si se activa, elimine la afiliación. Si no, establezca el estado de la afiliación como el especificado en la configuración relacionada, Estado afilia eliminar inscrip programa.</inlineHelpText>
    <label>Affil Delete When Delete Prog Enroll</label>
    <type>Checkbox</type>
</CustomField>