EDAUMMSandbox/EDAUMMSandbox/force-app/main/default/objects/hed__Hierarchy_Settings__c/fields/hed__Affl_ProgEnroll_Del_Status__c.field-meta.xml
<CustomField>
    <fullName>hed__Affl_ProgEnroll_Del_Status__c</fullName>
    <description>If the related setting, Affil Delete When Delete Prog Enroll, is disabled, this setting specifies the value to set for the Affiliation&apos;s Status, when its related Program Enrollment is deleted.</description>
    <inlineHelpText>Si se desactiva la configuración relacionada, Elim afilia al eliminar inscrip programa, esta configuración especifica el valor a establecer para el estado de afiliación, cuando se elimina su Inscripción de programa relacionada.</inlineHelpText>
    <label>Affil Status When Delete Prog Enroll</label>
    <length>255</length>
    <type>Text</type>
</CustomField>