EDAUMMSandbox/EDAUMMSandbox/force-app/main/default/objects/hed__Hierarchy_Settings__c/fields/hed__Affl_ProgEnroll_Role_Map__c.field-meta.xml
<CustomField>
    <fullName>hed__Affl_ProgEnroll_Role_Map__c</fullName>
    <description>If the related setting, Affil Set Role When Create Prog Enroll, is enabled, this setting specifies the value to set for the Role on the Affiliation created with a Program Enrollment.</description>
    <inlineHelpText>Si se desactiva la configuración relacionada, Función conj afilia crear inscr programa, esta configuración especifica el valor a establecer para la función en la afiliación creada con una Inscripción de programa.</inlineHelpText>
    <label>Affil Role When Create Prog Enroll</label>
    <length>255</length>
    <type>Text</type>
</CustomField>