EDAUMMSandbox/EDAUMMSandbox/force-app/main/default/objects/hed__Hierarchy_Settings__c/fields/hed__Affl_ProgEnroll_Set_Role__c.field-meta.xml
<CustomField>
    <fullName>hed__Affl_ProgEnroll_Set_Role__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether to specify a Role for the Affiliation created with a Program Enrollment. If enabled, set the Affiliation&apos;s Role to the value specified in the related setting, Affil Role When Create Prog Enroll. If disabled, don&apos;t specify a Role.</description>
    <inlineHelpText>Indica si especificar una función para afiliación creada con una inscripción. Si se activa, establezca la función de la afiliación como el valor en la configuración relacionada, Función afilia al crear inscrip programa. Si no, no especifique una función.</inlineHelpText>
    <label>Affil Set Role When Create Prog Enroll</label>
    <type>Checkbox</type>
</CustomField>