EDAUMMSandbox/EDAUMMSandbox/force-app/main/default/objects/hed__Hierarchy_Settings__c/fields/hed__Affl_ProgEnroll_Status_Map__c.field-meta.xml
<CustomField>
    <fullName>hed__Affl_ProgEnroll_Status_Map__c</fullName>
    <description>The value set for the Status of an Affiliation record automatically created with a Program Enrollment.</description>
    <inlineHelpText>El valor establecido para el estado de un registro de afiliación creado automáticamente con una Inscripción de programa.</inlineHelpText>
    <label>Affil Status When Create Prog Enroll</label>
    <length>255</length>
    <type>Text</type>
</CustomField>