EDAUMMSandbox/EDAUMMSandbox/force-app/main/default/objects/hed__Hierarchy_Settings__c/fields/hed__Async_Error_Check_Last_Run__c.field-meta.xml
<CustomField>
    <fullName>hed__Async_Error_Check_Last_Run__c</fullName>
    <description>The most recent execution date of the Async Job error logger.</description>
    <inlineHelpText>La fecha de ejecución más reciente del registrador de errores de trabajos asíncronos.</inlineHelpText>
    <label>Async Error Check Last Run</label>
    <type>DateTime</type>
</CustomField>