EDAUMMSandbox/EDAUMMSandbox/force-app/main/default/objects/hed__Hierarchy_Settings__c/fields/hed__Automatic_Household_Naming__c.field-meta.xml
<CustomField>
    <fullName>hed__Automatic_Household_Naming__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If enabled, the Household Name is automatically set based on the Household Name Format settings.</description>
    <inlineHelpText>Si se activa, el nombre de hogar se establece automáticamente en la configuración de Formato de nombre de hogar.</inlineHelpText>
    <label>Automatic Household Naming</label>
    <type>Checkbox</type>
</CustomField>