EDAUMMSandbox/EDAUMMSandbox/force-app/main/default/objects/hed__Hierarchy_Settings__c/fields/hed__Contacts_Addresses_Enabled__c.field-meta.xml
<CustomField>
    <fullName>hed__Contacts_Addresses_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enables multi-address functionality for Contacts.</description>
    <inlineHelpText>Activa la función de direcciones múltiples para contactos.</inlineHelpText>
    <label>Address management support for Contacts.</label>
    <type>Checkbox</type>
</CustomField>