EDAUMMSandbox/EDAUMMSandbox/force-app/main/default/objects/hed__Hierarchy_Settings__c/fields/hed__Default_Contact_Language_Fluency__c.field-meta.xml
<CustomField>
    <fullName>hed__Default_Contact_Language_Fluency__c</fullName>
    <description>The Fluency value automatically set on newly created Contact Language records when users set the Primary Language lookup field on a Contact.</description>
    <inlineHelpText>El valor de Fluidez se establece automáticamente en registros de Idioma de contacto recién creados cuando los usuarios establecen el campo de búsqueda Idioma principal en un contacto.</inlineHelpText>
    <label>Default Contact Language Fluency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>