EDAUMMSandbox/EDAUMMSandbox/force-app/main/default/objects/hed__Hierarchy_Settings__c/fields/hed__Disable_Preferred_Email_Enforcement__c.field-meta.xml
<CustomField>
    <fullName>hed__Disable_Preferred_Email_Enforcement__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Disable the enforcement of the Preferred Email field for Contact.</description>
    <inlineHelpText>Seleccione para desactivar la aplicación del campo Email preferido para Contactos.</inlineHelpText>
    <label>Disable Preferred Email Enforcement</label>
    <type>Checkbox</type>
</CustomField>