EDAUMMSandbox/EDAUMMSandbox/force-app/main/default/objects/hed__Hierarchy_Settings__c/fields/hed__Enable_Course_Connections__c.field-meta.xml
<CustomField>
    <fullName>hed__Enable_Course_Connections__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When enabled, allows users to choose the Contact type (Faculty or Student) when creating a Course Connection record. This feature requires default Contact record types to be set for active students and faculty.</description>
    <inlineHelpText>Cuando se activa, permite a los usuarios elegir el tipo de contacto (Facultad o Estudiante) cuando se crea un registro Enlace de curso. Esta función requiere que los tipos de registro Contacto estén establecidos para estudiantes y facultades.</inlineHelpText>
    <label>Enable Course Connections</label>
    <type>Checkbox</type>
</CustomField>