EDAUMMSandbox/EDAUMMSandbox/force-app/main/default/objects/hed__Hierarchy_Settings__c/fields/hed__Enable_New_Preferred_Phone_Sync__c.field-meta.xml
<CustomField>
    <fullName>hed__Enable_New_Preferred_Phone_Sync__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Turns on the Preferred Phone functionality that was released in EDA 1.82. This functionality syncs the Preferred Phone field to the Contact&apos;s standard Phone field and validates that the value in Preferred Phone exists and has a value.</description>
    <inlineHelpText>Sincroniza el campo Teléfono de preferencia con el campo Teléfono estándar del contacto y valida que el valor en Teléfono de preferencia existe y tiene un valor.</inlineHelpText>
    <label>Enable New Preferred Phone Sync</label>
    <type>Checkbox</type>
</CustomField>