EDAUMMSandbox/EDAUMMSandbox/force-app/main/default/objects/hed__Hierarchy_Settings__c/fields/hed__Faculty_RecType__c.field-meta.xml
<CustomField>
    <fullName>hed__Faculty_RecType__c</fullName>
    <description>The default Contact record type for Faculty when creating a Course Connection record.</description>
    <inlineHelpText>El tipo de registro Contacto predeterminado para Facultad cuando se crea un registro Enlace de curso.</inlineHelpText>
    <label>Faculty Record Type</label>
    <length>18</length>
    <type>Text</type>
</CustomField>