EDAUMMSandbox/EDAUMMSandbox/force-app/main/default/objects/hed__Hierarchy_Settings__c/fields/hed__Household_Addresses_RecType__c.field-meta.xml
<CustomField>
    <fullName>hed__Household_Addresses_RecType__c</fullName>
    <description>The Account record type used for Household Accounts. This setting affects management of Address records and the naming format of Household Accounts.</description>
    <inlineHelpText>El tipo de registro de Cuenta utilizado para Cuentas domésticas. Esta configuración afecta a la gestión de registros Dirección y el formato de nomenclatura de Cuentas domésticas.</inlineHelpText>
    <label>Household Addresses Acc Record Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>