EDAUMMSandbox/EDAUMMSandbox/force-app/main/default/objects/hed__Hierarchy_Settings__c/fields/hed__Household_Other_Name_Setting__c.field-meta.xml
<CustomField>
    <fullName>hed__Household_Other_Name_Setting__c</fullName>
    <description>Stores other information about the Household Account naming format.</description>
    <inlineHelpText>Almacena información sobre el formato de nomenclatura de cuenta doméstica.</inlineHelpText>
    <label>Household Other Name Setting</label>
    <length>255</length>
    <type>Text</type>
</CustomField>