EDAUMMSandbox/EDAUMMSandbox/force-app/main/default/objects/hed__Hierarchy_Settings__c/fields/hed__Reciprocal_Method__c.field-meta.xml
<CustomField>
    <fullName>hed__Reciprocal_Method__c</fullName>
    <description>Determines the method used to generate the reciprocal relationship. Use List Setting to use custom settings by gender. Use Value Inversion to invert the type if appropriate (&quot;Parent-Child&quot; to &quot;Child-Parent&quot;)</description>
    <inlineHelpText>Determina el método utilizado para generar la relación de reciprocidad. Utilice Configuración de lista para emplear parámetros personalizados por género. Utilice Inversión de valor para invertir el tipo si procede (&quot;Padre-Hijo&quot; a &quot;Hijo-Padre&quot;).</inlineHelpText>
    <label>Reciprocal Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>