EDAUMMSandbox/EDAUMMSandbox/force-app/main/default/objects/hed__Hierarchy_Settings__c/fields/hed__Relationship_Name_Id_Field_Id__c.field-meta.xml
<CustomField>
    <fullName>hed__Relationship_Name_Id_Field_Id__c</fullName>
    <description>This field is currently not used.</description>
    <inlineHelpText>Este campo no se utiliza en estos momentos.</inlineHelpText>
    <label>Relationship Name Id Field Id</label>
    <length>25</length>
    <type>Text</type>
</CustomField>