EDAUMMSandbox/EDAUMMSandbox/force-app/main/default/objects/hed__Hierarchy_Settings__c/fields/hed__Simple_Address_Change_Treated_as_Update__c.field-meta.xml
<CustomField>
    <fullName>hed__Simple_Address_Change_Treated_as_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When enabled, changes to single address fields on Contact or Account are treated as updates to the existing address (for example, no new Address object is created). White space and case changes are treated as updates.</description>
    <inlineHelpText>Cuando se activa, los cambios en campos de dirección únicos en Contactos o Cuentas se tratan como actualizaciones en la dirección existente (por ejemplo, no se crea ningún objeto Dirección nuevo). Los cambios de caso y los espacios en blanco se tratan como actualizaciones.</inlineHelpText>
    <label>Simple Address Change Treated as Update</label>
    <type>Checkbox</type>
</CustomField>